<?xml version="1.0"?>
<package>
  <name>driftnode_description</name>
  <version>0.1.1</version>
  <description>UoSC Drift node URDF description</description>

  <author email="albertoq@cse.sc.edu">Alberto Quattrini Li</author>

  <maintainer email="albertoq@cse.sc.edu">Alberto Quattrini Li</maintainer>

  <!--url type="website">http://ros.org/wiki/driftnode_description</url>
  <url type="bugtracker">https://github.com/driftnodes/issues</url>
  <url type="repository">https://github.com/driftnodes/</url-->

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


  <export>
  </export>
</package>
