<package>

  <name>raspicamera_py</name>
  <version>0.1.0</version>
  <description>
    Python interface and program for the Raspberry Pi camera.

    This ROS package provides an interface for the Raspberry Pi camera to set
    the camera parameters. In addition, a program in Python is provided that
    considers different use cases for setting the camera parameters, together
    with a ROS publisher.
  </description>
  <maintainer email="albertoq@cse.sc.edu">Alberto Quattrini Li</maintainer>
  <author>Alberto Quattrini Li</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/raspicamera_py</url>
  <url type="repository"></url>
  <url type="bugtracker"></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>python-opencv</build_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>python-gflags</run_depend>
  <run_depend>python-opencv</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>picamera</run_depend>
  <run_depend>cv_bridge</run_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>

